# MLDS-SQ

./: README.md
Cloud-Engineering/2024-AWS-Workshops/: README.md
Cloud-Engineering/2024-AWS-Workshops/Cost/: README.md
Cloud-Engineering/2024-AWS-Workshops/EC2/: Activity.md  README.md
Cloud-Engineering/2024-AWS-Workshops/ECS/: README.md  aws-cli.md  cleanup.md  copilot-tutorial.md  ecr-repo.md  ecs-cloudformation.md  ecs-console.md  ecs-getting-started.md  iam-admin-user.md
Cloud-Engineering/2024-AWS-Workshops/IAM/: README.md  basics.md  iam-admin-user.md
Cloud-Engineering/2024-AWS-Workshops/Lambda/: Activity.md  README.md
Cloud-Engineering/2024-AWS-Workshops/RDS/: .gitignore  README.md  free-tier.md
Cloud-Engineering/2024-AWS-Workshops/S3/: README.md
Cloud-Engineering/2024-AWS-Workshops/SQS/: README.md  message.json
Cloud-Engineering/2024-AWS-Workshops/boto3/: Dockerfile  README.md  app.py
Cloud-Engineering/Week4/Week4/: 4.1-DockerIntro.md  4.2-DockerSpark.md  4.3-DockerImage.md  4.4-KubernetesIntro.md  webapp-deployment.yaml
Cloud-Engineering/Week5/solution/: config_reader.py
Cloud-Engineering/Week7/Week7/: Dockerfile
Cloud-Engineering/Week7/image-search/: README.md  loader.py  search_app.py
Cloud-Engineering/Week8/share/: 8.1-AB-Testing-Simulated.ipynb  8.2-MAB.ipynb
Cloud-Engineering/nu-labs/423-api-lab-activity/: README.md
Cloud-Engineering/nu-labs/423-architecture-lab-activity/: README.md  architecture-starter.drawio  plaintext.txt
Cloud-Engineering/nu-labs/423-docker-lab-activity/: README.md  dockerfile-basics.md
Cloud-Engineering/nu-labs/423-environment-lab-activity/: README.md
Cloud-Engineering/nu-labs/423-environment-lab-activity/virtual_environments/examples/poetry/tutorial/: pyproject.toml
Cloud-Engineering/nu-labs/423-lint_and_hint-lab-activity/: Dockerfile  README.md  pipx.md
Cloud-Engineering/nu-labs/423-lint_and_hint-lab-activity/typehints/: README.md  address.py  dataclass.md  example.ipynb  example.py  pydantic.md  pyproject.toml  requirements.txt  typed_example.ipynb  typed_example.py
Cloud-Engineering/nu-labs/423-logging-lab-activity/: Activity.md  Dockerfile  README.md
Cloud-Engineering/nu-labs/423-pipeline-deployment-lab-activity/: README.md  diagrams.drawio
Cloud-Engineering/nu-labs/423-pipeline-deployment-lab-activity/example/pipeline/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
Cloud-Engineering/nu-labs/423-pipeline-deployment-lab-activity/example/pipeline/config/: deep-tree.yaml  default.yaml  tiny.yaml
Cloud-Engineering/nu-labs/423-pipeline-deployment-lab-activity/example/pipeline/src/: aws_utils.py  main.py
Cloud-Engineering/nu-labs/423-sqlalchemy-lab-activity/: README.md
Cloud-Engineering/nu-labs/423-streamlit-lab-activity/: README.md
Cloud-Engineering/nu-labs/423-streamlit-lab-activity/example/iris_app/: Dockerfile  Makefile  pyproject.toml  requirements.txt
Cloud-Engineering/nu-labs/423-streamlit-lab-activity/example/iris_app/src/iris_app/: app.py  aws_utils.py
Cloud-Engineering/nu-labs/423-streamlit-lab-activity/example/pipeline/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
Cloud-Engineering/nu-labs/423-streamlit-lab-activity/example/pipeline/src/iris_pipeline/: aws_utils.py  main.py
Cloud-Engineering/nu-labs/423-testing-lab-activity/: Activity.md  README.md
Cloud-Engineering/nu-labs/423-testing-lab-activity/activity/: Dockerfile  pyproject.toml  requirements.txt
Cloud-Engineering/nu-labs/423-testing-lab-activity/activity/src/testing_lab/: example.py
Cloud-Engineering/nu-labs/423-testing-lab-activity/activity/tests/: test_example.py
Cloud-Engineering/nu-labs/423-yaml-lab-activity/: README.md
Deep-Learning/Assignments/hw1/: Assignment1_Code_Ayush.ipynb
Deep-Learning/Week1/: requirements.txt
Deep-Learning/Week2/Session2/: 2.2-LearningRate.ipynb  2.3-BatchSize.ipynb  2.4-Momentum.ipynb  2.5-DataNormalization.ipynb  2.6-ActivationFunctions.ipynb  2.7-NeuralNetwork.ipynb  2.8-IRIS-Classification-Exercise.ipynb
Deep-Learning/Week2/student/: lab3.1.ipynb  lab3.2.ipynb
Deep-Learning/Week3/Session3/: 3.1-NonConvexOptimization-2d.ipynb  3.2-NonConvexOptimization-3d-Exercise.ipynb  3.3-TensorFlow-Introduction.ipynb  3.6-Keras-XOR-ANN.ipynb  (+5 more)
(+240 files in other folders)
