[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testing_lab"
version = "0.0.1"
authors = [
  { name="Michael Fedell", email="mfedell@northwestern.edu" },
]
description = "A small example package"
requires-python = ">=3.9"

[tool.hatch.build.targets.wheel]
packages = ["src/testing_lab"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
