[tool.poetry]
name = "iris_app"
version = "0.1.0"
description = ""
authors = ["Michael Fedell <michaelfedell14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4"
joblib = "1.4.2"
numpy = "^1.26"
boto3 = "^1.34"
streamlit = "^1.30"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ipython = "^8.24.0"
pytest = "^8.2.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
