[tool.poetry]
name = "iris-pipeline"
version = "0.1.0"
description = ""
authors = ["Michael Fedell <michaelfedell14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4"
joblib = "1.4.2"
boto3 = "^1.34"
pyyaml = "^6.0"

[tool.poetry.scripts]
pipeline = "src.main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.4"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
